[project]
name = "hf-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "gradio[mcp] (>=6.15.2,<7.0.0)",
    "textblob (>=0.20.0,<0.21.0)",
    "smolagents[mcp] (>=1.26.0,<2.0.0)",
    "mcp (>=1.27.2,<2.0.0)",
    "fastmcp (>=3.3.1,<4.0.0)",
    "huggingface-hub[mcp] (>=0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
